Enabled WebSocket integration for real-time auction updates ✅
📌 Added WebSocket infrastructure with `AuctionWebSocketEndpoint` and `WebSocketConfigurator` for live bid updates. Introduced `AuctionWebSocket` JavaScript client for client-side WebSocket handling. Integrated `BidNotificationMDB` to broadcast updates to WebSocket clients. Updated `BidUpdateMessage` with serialization support for `LocalDateTime`. Enhanced UI with real-time bid notifications, connection status styles, and a new WebSocket test page. Updated `pom.xml` with Jackson and JSR310 dependencies.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -86,4 +86,9 @@
         <mime-type>text/css</mime-type>
     </mime-mapping>
 
+    <!-- WebSocket Configuration -->
+    <listener>
+        <listener-class>com.auction.config.WebSocketConfigurator</listener-class>
+    </listener>
+
 </web-app>
